[tool.poetry]
name = "cropper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.6.0.66"
filelister = {path = "../filelister/dist/filelister-0.0.0-py3-none-any.whl"}
tqdm = "^4.64.1"
joblib = "^1.1.0"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pylint = "^2.15.2"
pytest = "^7.1.3"

[tool.poetry.scripts]
cropper = "cropper.cli:cropper"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
